# web-surfing-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  package.json  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
cli/: README.md  pyproject.toml
cli/src/wsc/: _url.py  audit.py  cli.py  config.py  routing.py
cli/src/wsc/ops/: __init__.py  _chain.py  crawl.py  discover.py  docs.py  fetch.py  plan.py  search.py
cli/src/wsc/providers/: __init__.py  base.py  brave.py  context7.py  duckduckgo.py  exa.py  firecrawl.py  tavily.py
cli/tests/: conftest.py  test_audit.py  test_cli.py  test_config.py  test_ops.py  test_providers.py  test_routing.py  test_smoke.py  test_url.py
commands/: web-deepdive.md  web-discover.md  web-docs.md  web-fetch.md  web-install.md  web-receipts.md  web-search.md  web-verify.md  web.md
scripts/: check-versions.sh
skills/web-surfing-cli/: SKILL.md
src/: _url.ts  audit.ts  cache.ts  cli.ts  config.ts  domains.ts  mcp.ts  routing.ts
src/ops/: _chain.ts  crawl.ts  deepdive.ts  discover.ts  docs.ts  fetch.ts  plan.ts  search.ts  verify.ts
src/providers/: base.ts  brave.ts  context7.ts  duckduckgo.ts  exa.ts  firecrawl.ts  index.ts  tavily.ts
test/: _setup.ts  audit.test.ts  cache.test.ts  cli.test.ts  config.test.ts  domains.test.ts  mcp.test.ts  ops.test.ts  providers.test.ts  routing.test.ts  url.test.ts
